[gd_scene load_steps=19 format=3 uid="uid://bwpes7pcpqnhl"]

[ext_resource type="Script" path="res://scripts/character/entity/enemy/enemy.gd" id="1_ppt2a"]
[ext_resource type="PackedScene" uid="uid://c02bm6vhclraa" path="res://character/entity/entity.tscn" id="1_sqidf"]
[ext_resource type="Texture2D" uid="uid://ded06eyigw6io" path="res://texture/ui/hud/enemy_variable_bar/enemyHealthBar1.png" id="4_1rh0l"]
[ext_resource type="Texture2D" uid="uid://d3vduish3n3mv" path="res://texture/ui/hud/enemy_variable_bar/enemyHealthBar2.png" id="5_jsiu4"]
[ext_resource type="Script" path="res://scripts/ui/hud/enemy_health_bar.gd" id="6_53jjb"]
[ext_resource type="PackedScene" uid="uid://74b36ijn5xry" path="res://collisionbox/hurtbox/enemy_hurtbox.tscn" id="7_ldjus"]
[ext_resource type="PackedScene" uid="uid://b6v0g5ygjvg1h" path="res://collisionbox/hitbox.tscn" id="8_wlvxk"]
[ext_resource type="AnimationLibrary" uid="uid://31gix57stba0" path="res://animaction/enemy_hurtblink.res" id="10_cv1qk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="10_pwj0v"]
[ext_resource type="PackedScene" uid="uid://dwsbymttet7g0" path="res://character/popup_location.tscn" id="10_uwdq1"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="11_q61hu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="12_uhg1e"]
[ext_resource type="AnimationLibrary" uid="uid://b1ipseiv5yfi0" path="res://animaction/enemy.res" id="13_8ipbv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sss1u"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nrq5f"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3p7b6"]
radius = 160.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4x8uy"]
radius = 192.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xlgen"]
radius = 96.0

[node name="Enemy" node_paths=PackedStringArray("hurtbox") instance=ExtResource("1_sqidf")]
collision_layer = 8
collision_mask = 13
script = ExtResource("1_ppt2a")
target_position = Vector2(0, 0)
data_name = ""
move_speed = 100
current_move_speed = 0
attack_ready_time = 0.0
collision_knockback_force = 0
collision_damage = 0
hurtbox = NodePath("EnemyHurtbox")

[node name="SpawnEffect" type="ColorRect" parent="Texture/Body" index="1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="HUD" type="Node2D" parent="Texture" index="1"]
visible = false
position = Vector2(0, -25)
scale = Vector2(0.5, 0.5)

[node name="health_bar" type="TextureProgressBar" parent="Texture/HUD" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -3.0
offset_right = 28.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
texture_under = ExtResource("4_1rh0l")
texture_progress = ExtResource("5_jsiu4")
script = ExtResource("6_53jjb")

[node name="AimLine" type="ColorRect" parent="Texture" index="2"]
visible = false
z_index = -5
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 72.0
offset_bottom = 12.0
grow_vertical = 2
pivot_offset = Vector2(0, 12)
color = Color(0.5, 0, 0, 0.5)
metadata/_edit_use_anchors_ = true

[node name="EnemyHurtbox" parent="." index="2" instance=ExtResource("7_ldjus")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox" index="3"]
shape = SubResource("CircleShape2D_sss1u")

[node name="Hitbox" parent="." index="3" instance=ExtResource("8_wlvxk")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(-2.82402e-06, -1.00746e-06)
shape = SubResource("CircleShape2D_nrq5f")

[node name="Aggro" type="Node2D" parent="." index="4"]

[node name="AggroRange" type="Area2D" parent="Aggro" index="0"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/AggroRange" index="0"]
shape = SubResource("CircleShape2D_3p7b6")
debug_color = Color(0.756863, 0, 0.152941, 0.45098)

[node name="DeAggroRange" type="Area2D" parent="Aggro" index="1"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/DeAggroRange" index="0"]
shape = SubResource("CircleShape2D_4x8uy")
debug_color = Color(0, 0.627451, 0.494118, 0.313726)

[node name="AttackRange" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]
shape = SubResource("CircleShape2D_xlgen")
debug_color = Color(0.725, 0.152, 0.257, 0.346)

[node name="Nav" type="Node2D" parent="." index="6"]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Nav" index="0"]
path_postprocessing = 1
path_metadata_flags = 0
simplify_path = true
avoidance_enabled = true
max_speed = 100000.0
avoidance_layers = 2
avoidance_mask = 2

[node name="PathTimer" type="Timer" parent="Nav" index="1"]
wait_time = 0.1
autostart = true

[node name="PopupLocation" parent="." index="7" instance=ExtResource("10_uwdq1")]

[node name="AttackTimer" type="Timer" parent="." index="9"]
one_shot = true

[node name="StatePlayer" parent="." index="10"]
libraries = {
"enemy": ExtResource("13_8ipbv")
}
autoplay = ""

[node name="HurtEffectPlayer" parent="." index="11"]
libraries = {
"": ExtResource("10_cv1qk")
}

[node name="Chase" type="Node" parent="StateChart/CompoundState" index="3"]
script = ExtResource("11_q61hu")

[node name="Attack" type="Node" parent="StateChart/CompoundState" index="4"]
script = ExtResource("10_pwj0v")
initial_state = NodePath("Melee")

[node name="Melee" type="Node" parent="StateChart/CompoundState/Attack" index="0"]
script = ExtResource("11_q61hu")

[node name="Ranged" type="Node" parent="StateChart/CompoundState/Attack" index="1"]
script = ExtResource("11_q61hu")

[node name="chase" type="Node" parent="StateChart/CompoundState" index="8"]
script = ExtResource("12_uhg1e")
to = NodePath("../Chase")
event = &"chase"
delay_in_seconds = "0.0"

[node name="attack" type="Node" parent="StateChart/CompoundState" index="9"]
script = ExtResource("12_uhg1e")
to = NodePath("../Attack")
event = &"attack"
delay_in_seconds = "0.0"

[node name="melee" type="Node" parent="StateChart/CompoundState" index="10"]
script = ExtResource("12_uhg1e")
to = NodePath("../Attack/Melee")
event = &"melee"
delay_in_seconds = "0.0"

[node name="ranged" type="Node" parent="StateChart/CompoundState" index="11"]
script = ExtResource("12_uhg1e")
to = NodePath("../Attack/Ranged")
event = &"ranged"
delay_in_seconds = "0.0"

[connection signal="area_entered" from="Aggro/AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="Aggro/DeAggroRange" to="." method="_on_de_aggro_range_area_exited"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attack_range_area_exited"]
[connection signal="velocity_computed" from="Nav/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Nav/PathTimer" to="." method="_on_path_timer_timeout"]
[connection signal="state_entered" from="StateChart/CompoundState/Chase" to="." method="_on_chase_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/Chase" to="." method="_on_chase_state_exited"]
